--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
 *{ margin:0px; padding:0px;}
 a{ text-decoration:none; color:#000;}
 li {list-style:none;}
+#map {
+        height:600px;
+		width:1000px;
+      }
 h1{
 	font-family:Arial, Helvetica, sans-serif;
 	font-size:16px;
